--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,10 @@
 
   /* 颜色 */
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+}
+
+body {
+  min-height: 100vh;
+  padding: 30px 40px;
+  background-color: #212121;
 }
